Simple case working libstarch with support for chunked input.
TODO:
* test skip functionality - all skip use cases should be supported
* test different archive types
* run tests through valgrind
* run source through clang static analyzer
* documentation
* travil build file

--- a/.gitignore
+++ b/.gitignore
@@ -43,20 +43,24 @@ autom4te.cache
 
 # additions
 
+*.a
 *.core
 *.dSYM
 *.diff
 *.gcno
-*.lo
 *.la
+*.lo
+*.log
 *.o
-*.a
 *.patch
+*.trs
 *~
 .deps/
 .libs/
-Makefile
 /config.log
 /config.status
 /libtool
-build-aux/
+/m4
+/build-aux
+core
+Makefile
