--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,6 +2,7 @@ TESTS = check_tar_gz
 check_PROGRAMS = check_tar_gz
 
 @CODE_COVERAGE_RULES@
+@VALGRIND_CHECK_RULES@
 
 check_tar_gz_SOURCES = check_tar_gz.c $(top_builddir)/src/starch.h
 check_tar_gz_CFLAGS = $(CODE_COVERAGE_CFLAGS) @CHECK_CFLAGS@ -I$(top_builddir)/include
