--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,25 +4,30 @@ task:
     - freebsd_instance:
         image: freebsd-11-2-release-amd64
       pre_install_script:
-        - pkg install -y libtool automake autoconf autoconf-archive gmake check
+        - pkg install -y libtool automake autoconf autoconf-archive gmake check pkgconfig libarchive
     - osx_instance:
         image: mojave-xcode-10.2
       pre_install_script:
-        - brew install libtool automake autoconf autoconf-archive check
+        - brew install libtool automake autoconf autoconf-archive check make pkgconfig libarchive
     - container:
         image: alpine:latest
       pre_install_script:
-        - apk add clang autoconf automake automake make libtool check
+        - apk add clang autoconf automake automake make libtool check-dev libc-dev binutils gcc pkgconfig libarchive-dev
+        - printf "#include <stdio.h>\nint main() { printf(\"hello-world\\\\n\"); return 0; }\n" > hello-world.c
+        - clang -o hello-world hello-world.c
+        - ./hello-world
+      env:
+          PKG_CONFIG_PATH:  /usr/share/aclocal
 
   install_script:
     - clang --version
     - ./autogen.sh
-    - ./configure CC=clang
-    - gmake get-deps
+    - ./configure CC=clang || cat config.log
+      # - gmake get-deps
   make_script:
-    - gmake
-  check_script: gmake check
-  dist_check_script: gmake dist-check
+    - make
+  check_script: make check
+  dist_check_script: make dist-check
   artifacts:
     - libcheck-*.tar.gz
     - libcheck-*.tar.xz
